--- a/src/app.html
+++ b/src/app.html
@@ -5,7 +5,19 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=${font}:wght@400;700&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
+	<style>
+		body {
+			margin: 0;
+			box-sizing: border-box;
+		}
+	</style>
 	<body>
 		<div>%sveltekit.body%</div>
 	</body>
